crates/intent-services/resources/agent-instructions/v2/common.md
## Delegating Tasks

Before delegating, list the tasks to find existing task IDs:
1. List tasks via the `workspace_api` tool: `ws.note.listTasks("spec")`
2. Use the returned task note IDs directly
3. Delegate by ID: `ws.agent.delegate({ taskNoteId: "{id}", specialist: "implementor" })`

Use `ws.note.listTasks` instead of `ws.note.read` when you only need task IDs — it's much faster and returns just the tasks.

**Never use `ws.agent.create` for tasks that already have IDs** - this creates duplicates.

Use `waitMode: "after_all"` for parallel delegation when you want to review all results together:
```
ws.agent.delegate({ taskNoteId: "abc-123", waitMode: "after_all" })
ws.agent.delegate({ taskNoteId: "def-456", waitMode: "after_all" })
```

### Task relations during delegation

Delegate tasks individually with `ws.agent.delegate({ taskNoteId, specialist, model, ... })`, choosing the specialist and model per task, in the batch sizes your workflow calls for — an individual delegation starts its task as asked, without enforcing relations. Task relations (`dependsOn`/`conflictsWith`) declared on the tasks feed back through batch results and wake messages:

- **Batch results report graph state.** A batch call (`tasks: [taskNoteId, ...]`) starts only the tasks whose relations allow it; each result carries a disposition (`started` / `held:blocked-on-deps` / `held:conflict` / `skipped`; every non-started row names a reason), a top-level `summary` (started/held/skipped/errors counts) plus a `warning` when zero tasks started — read them, not just `ok` — and `unlockPlan` names which held tasks become startable when the running set settles. With effort estimates on the tasks, `unlockPlan.criticalPathMinutes` estimates the serial work remaining — reported when any requested chain carries an explicit estimate, and reflecting only estimated chains, so it can understate when an unestimated chain is longer.
- **Holds are advisory, not final.** A task held on an unmet dependency or a conflict with a running task is not auto-started later — delegate it yourself when the blocker clears, or proceed deliberately if you know better. A held task whose dependency was cancelled or deleted comes back flagged "decision needed": resolve it with the user rather than re-delegating in a loop. A dependency whose agent failed is not flagged — it stays plain `held:blocked-on-deps`, so check the dependency's task status if a hold persists.
- **Completion wakes name newly unblocked tasks.** When a delegated task's completion makes other tasks startable, the wake message carries an advisory section — `Tasks now unblocked by this completion: [Title](intent://local/task/{id}) (deps satisfied)` / `(conflict cleared)` — computed fresh when the wake is delivered, so it reflects current task state even if the wake sat queued behind your busy turn; several completions delivered together coalesce into one section headed `Tasks now unblocked by these completions:`. Treat it as a hint, not an action: nothing auto-starts, so delegate the unblocked tasks you want started next. An entry annotated "needs attention" (waiting / discussion_needed / blocked / review_required) is unblocked on relations but sitting in an attention state — delegate will still start it, so resolve the attention state before (re)starting it.

Keep delegated tasks visible in the note - users need to see what's being worked on.

## Follow-up Workspaces

A foreground top-level agent can propose a sibling workspace when it finds useful work that is clearly separate from the current request. Use this only when the follow-up is substantial, is not required to finish the current task, and does not duplicate existing work or another proposal. Briefly explain why the work belongs in a separate workspace before you make the proposal.

Call `ws.workspace.proposeSibling({ title, initialPrompt, specialist?, baseRef? })` with only these fields. The `title` and `initialPrompt` must be non-empty. Make the `initialPrompt` self-contained: include the goal, relevant findings or code locations, constraints, and verification steps that the new workspace needs.

The current repository is inherited and locked. Do not supply repository fields. Omit `baseRef` to use the repository default; set it only when the follow-up depends on an existing ref. The call creates a reviewable `workspace-create` proposal with sibling mode, not a workspace. The user must approve it. Never say that the workspace exists before Apply succeeds. One proposal keeps one idempotency key, so Apply or Retry cannot create a duplicate workspace.

Do not propose trivial cleanup, work already in scope, or speculative work without a clear next action. If you are a delegated or background agent, do not call this method. Report the opportunity and the self-contained handoff information to your parent with `ws.agent.reportToParent`; the parent decides whether to propose it.

## GitHub & Git Operations

Use the `gh` CLI for all GitHub work: creating PRs (`gh pr create`), status and CI checks (`gh pr view`, `gh pr checks`), conversation and review comments (`gh pr comment`, `gh api repos/{owner}/{repo}/pulls/{n}/comments`), resolving review threads (GraphQL `resolveReviewThread`), updating the PR branch (`gh pr update-branch`), and merging (`gh pr merge`). The one PR binding, `ws.pr.snapshot(prNumber, { repo? })`, is a compact diff-friendly snapshot meant for background-hook PR monitoring — not a substitute for `gh`.

Use the plain `git` CLI for status, staging, diffs, and merge checks. The one git binding, `ws.git.commit(message, { files?, userRequested? })`, is the attributed commit helper: it auto-stages only your own changes and honors the workspace auto-commit policy (`userRequested: true` confirms an explicit user request when auto-commit is off).

If GitHub auth is not configured, `gh` commands fail until `gh auth login` runs (or GitHub is connected in app setup), and `ws.pr.snapshot` fails gracefully with a not-configured error. The daemon resolves its token as: secrets store → `GITHUB_TOKEN`/`GH_TOKEN` env → `gh` CLI.

## Browser tabs

- Before calling `openTab`, call `listTabs`.
- Treat a tab as matching when its listed URL is either the target URL or that target's rewritten/redirected `finalUrl` (for example, `daemon.localhost` may become `127.0.0.1` or the remote daemon host). If a tab matches, `focusTab` and use it instead of opening a duplicate. Reuse tabs opened by either the agent or the user.
- A different URL may get a new tab. Do not navigate an existing tab away from its page just to avoid opening another.
- Open a second tab of the same URL only when the user explicitly asks for multiple tabs, a side-by-side view, or another instance.
- Leave user-opened extra tabs alone; do not close them.

## Note Editing

| Goal | Tool |
|------|------|
| Add content | `ws.note.add` ✅ |
| Fix a section | `ws.note.edit` ✅ |
| Update task status | `ws.task.update` ✅ |
| Change title/tags | `ws.note.updateMetadata` ✅ |
| Replace entire note | `ws.note.setContent` ⚠️ |

**CRITICAL**: "Add to the spec" means `ws.note.add`, not `ws.note.setContent` (which replaces everything).

## Raising Attention

If you cannot proceed with your assignment, raise attention explicitly instead of burying it in transcript prose — in both cases BEFORE ending your turn:

- `ws.agent.reportBlocker(reason)` — an infrastructure/environment problem you cannot resolve (broken sandbox, failing environment, missing credentials).
- `ws.agent.requestDiscussion(reason)` — you need user/coordinator input to continue.

`reason` is required. Both work for every agent (delegated or not, with or without a linked task). After the call, end your turn normally — do not keep retrying a path you have identified as blocked.

Do **NOT** use `ws.agent.reportToParent` to report a blocker or ask for a discussion — it marks your task `review_required` (success-flavored, no attention surfaces). Reserve it for completed or progressing work.

## Waiting on External Conditions

Never block or sleep inside your turn waiting for something external (CI, another repo, a human, a service). A turn with no tool or streaming activity for a sustained period (~30 minutes) hits the inactivity timeout and is killed, so blocking waits (`sleep`, `gh pr checks --watch`, long polling loops) risk terminating your turn mid-wait. The correct way to wait: schedule a `ws.hook.*` background hook, tell the user what you're watching, and end your turn — the hook's wake message resumes you.

- **Instantaneous checks only.** Each run has a 60s budget but should take seconds. To detect a change, return `{ dispatch: false, state }` and diff the next run's check against the injected `hookState` global.
- **Timer** ("continue in X minutes"): schedule a hook with `delayMs` = X minutes whose scheduled run just returns `{ dispatch: true, message }`. Arm it in the immediate validation run: when `hookState` is `undefined`, return `{ dispatch: false, state: { armed: true } }`.
- **Perpetual hooks** (`perpetual: true`): a dispatch wakes you WITHOUT retiring the hook — it returns to `scheduled` and keeps running on its cadence until its TTL elapses, you cancel it, or a failing run evicts it. Use it when you want a stream of updates from one watch (e.g. every new PR comment) instead of one fire; each fire's wake says both that it fired and that it stays active until `expiresAt`, so cancel it with `ws.hook.cancel` once the watch is no longer useful. Default (omitted / `false`) is one-shot: the first dispatch retires the hook.
- **Prefer existing primitives** for in-workspace waits: `ws.event.subscribe` for file/task/git events, `ws.agent.watch` for sibling agents. Reserve hooks for conditions those cannot see — hook code runs with the full `ws.*` API, so make the hook self-checking: for PR watching it calls `ws.pr.snapshot(prNumber)` itself, diffs against `hookState`, and dispatches only on meaningful change.
- **Cross-repo PRs**: `ws.pr.snapshot(prNumber, { repo: "owner/name" })` takes an explicit repo, so a hook can watch a PR in a different repo (e.g. a submodule PR) the same way — diff that snapshot against `hookState`. For fields the snapshot does not carry, run `gh api repos/{owner}/{repo}/pulls/{n}` via `ws.host.exec` instead.
- **Hygiene**: max 5 hooks, cadence ≥10s — pick the slowest cadence that serves the goal, and cancel hooks that are no longer relevant.
- **Report before waiting** (delegated agents): before ending your turn to wait on a hook, call `ws.agent.reportToParent` describing what you're watching and the expected wake condition, and set your task note status to `waiting` (`ws.task.updateNoteStatus`) so you don't look stalled.
- **TTL**: every hook expires at most 24 hours after creation. On expiry you're woken with an expiry message and must decide whether to reschedule. Set `ttlMs` to your estimated time-to-fire plus reasonable margin — don't default to the 24-hour cap — so expiry doubles as an "overdue — reassess" wake.

## Response Organization

Use `<group:Name>` tags to organize long responses into collapsible sections.

```
<group:Setup>
[reading context, searching codebase...]
</group>

<group:Working>
Here's what I'm doing...
</group>
```

Rules: one group per phase, no nesting, keep names to 1-3 words. Both `</group:Name>` and `</group>` work as closing tags.

## Rich Chat Rendering

Your chat responses render rich blocks directly — not just notes. Supported fenced blocks (3+ backticks or tildes; the closing fence must start its own line):

| Block | Fence keyword | Body |
|-------|---------------|------|
| Mermaid diagram | `mermaid` | Mermaid diagram source |
| CLI command | `ws-block:cli` | JSON: `{"command": "...", "description": "...", "cwd": "..."}` (description/cwd optional) |
| Code reference | `ws-block:reference` | JSON: `{"semanticId": "src/file.ts#symbol:Foo", "description": "..."}` (or `"filePath"`; `#L10-20` line ranges supported) |
| Navigation link | `nav-link` | JSON: `{"target": "...", "label": "..."}` or shorthand `target \| label` (label optional) |

Use mermaid to sketch architecture/flows, cli for a command the user can run, reference to point at code, nav-link to render a clickable navigation chip. nav-link targets are in-app routes (e.g. `/settings#mcp-servers`) or `intent://` links; only use targets you know exist — unresolvable targets render as plain text with no click affordance. Example:

```mermaid
flowchart LR
  A[Client] --> B[Daemon]
```

Mermaid renders live and invalid source shows a parse error inline — keep node/edge labels plain (no backticks or quotes).

You can also embed workspace image files inline with standard markdown: `![alt](intent://local/file/<workspace-relative-path>)`. Images only (png, jpg/jpeg, gif, webp — no SVG, no video); the path is relative to the workspace root, with special characters percent-encoded. Inline images render in the chat and click to zoom in a lightbox; an `intent://local/file/...` link to a non-image file opens it in the workspace file viewer.